/**
 * Mirrors CampaignDto on the server. The property names have to match the JSON exactly,
 * so they are camelCase here — ASP.NET Core serialises that way by default.
 *
 * The enums arrive as strings rather than numbers because the API registers
 * JsonStringEnumConverter, which is also why these are string unions and not numeric enums:
 * "Mass" is what actually comes down the wire.
 */
export type CampaignType = 'Mass' | 'EnrollmentRequired';

/**
 * For an EnrollmentRequired (SI) campaign, which transactions count toward the reward once
 * a customer has joined. Null for a MASS campaign, which has no enrollment to measure from.
 */
export type EnrollmentBasis = 'ParticipationDate' | 'CampaignPeriod';

export type EarningType = 'CardBased' | 'CustomerBased';

export type CampaignStatus = 'Pending' | 'Ongoing' | 'Loading' | 'Ended';

export type Gender = 'Male' | 'Female';

export type CardType = 'Primary' | 'Supplementary';

export interface Campaign {
  id: number;
  name: string;
  description: string | null;
  campaignType: CampaignType;

  /** Null for a MASS campaign. */
  enrollmentBasis: EnrollmentBasis | null;

  startDate: string;
  endDate: string;
  minimumAmount: number | null;
  maximumAmount: number | null;
  rewardPoint: number | null;
  maxRewardAmount: number | null;

  /** Whether a refund reclaims points after the campaign has paid. */
  refundClawbackEnabled: boolean;

  /** Days after the reward is loaded a refund can still claw points back; null = no limit. */
  refundClawbackDays: number | null;

  /** Whether points never redeemed are clawed back once the window below has passed. */
  unusedPointsClawbackEnabled: boolean;

  /** Days after the reward is loaded a customer has to redeem it before the rest is clawed back. */
  unusedPointsClawbackDays: number | null;

  earningType: EarningType;

  /** Null when the campaign is open to every gender. */
  gender: Gender | null;

  /** Null when the campaign covers both primary and supplementary cards. */
  cardType: CardType | null;

  status: CampaignStatus;
  isActive: boolean;

  /** The campaign's terms, in display order. Empty until generated. */
  conditions: string[];
}

/**
 * What the create endpoint accepts. Id, status and isActive are absent because the server
 * decides them: a new campaign is always an active draft whose status follows from its dates.
 */
export interface CreateCampaign {
  name: string;
  description: string | null;
  campaignType: CampaignType;

  /** Required when campaignType is EnrollmentRequired; null otherwise. */
  enrollmentBasis: EnrollmentBasis | null;

  earningType: EarningType;

  // Null rather than omitted: the API reads null as "no restriction", which is what an
  // empty choice on the form means.
  gender: Gender | null;
  cardType: CardType | null;

  startDate: string;
  endDate: string;
  minimumAmount: number | null;
  maximumAmount: number | null;
  rewardPoint: number | null;
  maxRewardAmount: number | null;
  refundClawbackEnabled: boolean;
  refundClawbackDays: number | null;
  unusedPointsClawbackEnabled: boolean;
  unusedPointsClawbackDays: number | null;
}

/**
 * A campaign's scope. An empty list means the campaign places no restriction on that
 * dimension — not that it matches nothing.
 */
export interface CampaignCriteria {
  segmentIds: number[];
  productIds: number[];
  merchantIds: number[];
  transactionCodeIds: number[];

  /**
   * Card products exempt from the campaign's unused-points clawback. Not a scope filter like
   * the four lists above — a product listed here is unaffected by the clawback rule.
   */
  clawbackExemptProductIds: number[];
}

/**
 * What the update endpoint accepts. Same fields as CreateCampaign: the server decides id,
 * status and isActive in both cases, so neither is ever sent.
 */
export type UpdateCampaign = CreateCampaign;

/**
 * One line of a campaign's terms, as the admin screen edits them. Mirrors
 * CampaignConditionDto on the server.
 */
export interface CampaignCondition {
  /** 0 for a line that does not exist yet — the id a new line gets on save. */
  id: number;
  text: string;
  displayOrder: number;
  /** False for a line the operator typed in by hand. */
  isAutoGenerated: boolean;
}

/**
 * What the "new campaign" screen sends to preview its auto-generated terms before the
 * campaign exists to call .../conditions/generate on. Every field is optional on the server
 * side, unlike CreateCampaign — a half-filled draft must not fail validation the way an
 * actual save would.
 */
export interface CampaignConditionsPreviewRequest {
  campaignType: CampaignType;
  earningType: EarningType;
  gender: Gender | null;
  cardType: CardType | null;
  startDate: string | null;
  endDate: string | null;
  minimumAmount: number | null;
  maximumAmount: number | null;
  rewardPoint: number | null;
  maxRewardAmount: number | null;
  unusedPointsClawbackEnabled: boolean;
  unusedPointsClawbackDays: number | null;
  criteria: CampaignCriteria;
}
